--- a/.config/foot/foot.ini
+++ b/.config/foot/foot.ini
@@ -9,7 +9,7 @@ term=xterm-256color
 # locked-title=no
 
 #font=monospace:size=11
-font=DejaVuSansMono:size=11
+font=Adwaita Mono:size=11
 # font-bold=<bold variant of regular font>
 # font-italic=<italic variant of regular font>
 # font-bold-italic=<bold+italic variant of regular font>
@@ -183,3 +183,5 @@ background=000000
 # select-word-whitespace=Control+BTN_LEFT-2
 # select-row=BTN_LEFT-3
 
+[main]
+include=/usr/share/foot/themes/paper-color-light
