--- a/.config/sway/config
+++ b/.config/sway/config
@@ -34,35 +34,35 @@ tiling_drag disable
 
 ## Window keybindings
 # Set window movement keys
-bindsym Mod4+h focus left
-bindsym Mod4+j focus down
-bindsym Mod4+k focus up
-bindsym Mod4+l focus right
+bindsym Mod1+h focus left
+bindsym Mod1+j focus down
+bindsym Mod1+k focus up
+bindsym Mod1+l focus right
 
 # Move the focused window with the same, but add Shift
-bindsym Mod4+Shift+h move left
-bindsym Mod4+Shift+j move down
-bindsym Mod4+Shift+k move up
-bindsym Mod4+Shift+l move right
+bindsym Mod1+Shift+h move left
+bindsym Mod1+Shift+j move down
+bindsym Mod1+Shift+k move up
+bindsym Mod1+Shift+l move right
 
 # --- Layout
 # Layout
-bindsym Mod4+b splith
-bindsym Mod4+v splitv
-bindsym Mod4+z fullscreen
-bindsym Mod4+w layout stacking
-bindsym Mod4+t layout tabbed
-bindsym Mod4+e layout toggle split
-bindsym Mod4+m focus parent
-bindsym Mod4+c focus child
-
+bindsym Mod1+b splith
+bindsym Mod1+v splitv
+bindsym Mod1+z fullscreen
+bindsym Mod1+t layout stacking
+bindsym Mod1+w layout tabbed
+bindsym Mod1+e layout toggle split
+bindsym Mod1+m focus parent
+bindsym Mod1+c focus child
+bindsym Mod1+Tab focus right; focus down
 # --- Scratchpad
 # Move the currently focused window to the scratchpad
-bindsym Mod4+Shift+minus move scratchpad
+bindsym Mod1+Shift+minus move scratchpad
 
 # Show the next scratchpad window or hide the focused scratchpad window.
 # If there are multiple scratchpad windows, this command cycles through them.
-bindsym Mod4+minus scratchpad show
+bindsym Mod1+minus scratchpad show
 
 # Resizing containers:
 mode "Resize mode" {
@@ -75,20 +75,20 @@ mode "Resize mode" {
     bindsym Return mode "default"
     bindsym Escape mode "default"
 }
-bindsym Mod4+r mode "Resize mode"
+bindsym Mod1+r mode "Resize mode"
 
 ## Workspaces keybindings
-bindsym Mod4+a workspace number 1
-bindsym Mod4+s workspace number 2
-bindsym Mod4+d workspace number 3
-bindsym Mod4+f workspace number 4
-bindsym Mod4+g workspace number 5
+bindsym Mod1+a workspace number 1
+bindsym Mod1+s workspace number 2
+bindsym Mod1+d workspace number 3
+bindsym Mod1+f workspace number 4
+bindsym Mod1+g workspace number 5
 
-bindsym Mod4+Shift+a move container to workspace number 1
-bindsym Mod4+Shift+s move container to workspace number 2
-bindsym Mod4+Shift+d move container to workspace number 3
-bindsym Mod4+Shift+f move container to workspace number 4
-bindsym Mod4+Shift+g move container to workspace number 5
+bindsym Mod1+Shift+a move container to workspace number 1
+bindsym Mod1+Shift+s move container to workspace number 2
+bindsym Mod1+Shift+d move container to workspace number 3
+bindsym Mod1+Shift+f move container to workspace number 4
+bindsym Mod1+Shift+g move container to workspace number 5
 
 ## Experimental F key usage
 bindsym F1 workspace number 1
@@ -104,54 +104,54 @@ bindsym F10 workspace number 10
 bindsym F11 workspace number 11
 bindsym F12 workspace number 12
 
-bindsym Mod4+F1 move container to workspace number 1
-bindsym Mod4+F2 move container to workspace number 2
-bindsym Mod4+F3 move container to workspace number 3
-bindsym Mod4+F4 move container to workspace number 4
-bindsym Mod4+F5 move container to workspace number 5
-bindsym Mod4+F6 move container to workspace number 6
-bindsym Mod4+F7 move container to workspace number 7
-bindsym Mod4+F8 move container to workspace number 8
-bindsym Mod4+F9 move container to workspace number 9
-bindsym Mod4+F10 move container to workspace number 10
-bindsym Mod4+F11 move container to workspace number 11
-bindsym Mod4+F12 move container to workspace number 12
+bindsym Mod1+F1 move container to workspace number 1
+bindsym Mod1+F2 move container to workspace number 2
+bindsym Mod1+F3 move container to workspace number 3
+bindsym Mod1+F4 move container to workspace number 4
+bindsym Mod1+F5 move container to workspace number 5
+bindsym Mod1+F6 move container to workspace number 6
+bindsym Mod1+F7 move container to workspace number 7
+bindsym Mod1+F8 move container to workspace number 8
+bindsym Mod1+F9 move container to workspace number 9
+bindsym Mod1+F10 move container to workspace number 10
+bindsym Mod1+F11 move container to workspace number 11
+bindsym Mod1+F12 move container to workspace number 12
 ## Action keybindings
 
 # Kill 
-bindsym Mod4+q kill
+bindsym Mod1+q kill
 
 # Lock screen and suspend
-bindsym Mod4+Escape exec swaylock --daemonize & systemctl suspend
+bindsym Mod1+Escape exec swaylock --daemonize & systemctl suspend
 
 # Reload the configuration file
-bindsym Mod4+Shift+c reload
+bindsym Mod1+Shift+c reload
 
-# Drag floating windows by holding down Mod4 and left mouse button.
-floating_modifier Mod4 normal
+# Drag floating windows by holding down Mod1 and left mouse button.
+floating_modifier Mod1 normal
 
 # Exit sway (logs you out of your Wayland session)
-bindsym Mod4+Shift+e exec swaynag -t warning -m 'You pressed the exit shortcut. Do you really want to exit sway? This will end your Wayland session.' -B 'Yes, exit sway' 'swaymsg exit'
+bindsym Mod1+Shift+e exec swaynag -t warning -m 'You pressed the exit shortcut. Do you really want to exit sway? This will end your Wayland session.' -B 'Yes, exit sway' 'swaymsg exit'
 
 # Change keyboard layout
-bindsym Mod4+n input "1:1:AT_Translated_Set_2_keyboard" xkb_switch_layout next 
+bindsym Mod1+n input "1:1:AT_Translated_Set_2_keyboard" xkb_switch_layout next 
 
 ## Emacs mode
 # Leaving the workspace leaves the mode
 #mode emacs_mode {
-#    bindsym Mod4+Space mode default
-#    bindsym Mod4+a workspace number 1; mode default
-#    bindsym Mod4+s workspace number 2; mode default
-#    bindsym Mod4+d workspace number 3; mode default
-#    bindsym Mod4+f workspace number 4; mode default
-#    bindsym Mod4+g workspace number 5; mode default
+#    bindsym Mod1+Space mode default
+#    bindsym Mod1+a workspace number 1; mode default
+#    bindsym Mod1+s workspace number 2; mode default
+#    bindsym Mod1+d workspace number 3; mode default
+#    bindsym Mod1+f workspace number 4; mode default
+#    bindsym Mod1+g workspace number 5; mode default
 #}
-#bindsym Mod4+Space mode emacs_mode
+#bindsym Mod1+Space mode emacs_mode
 
 #-------------------- Runners -------------------- #
 
 # Start a terminal
-bindsym Mod4+Return exec foot
+bindsym Mod1+Return exec foot
 
 # Take screenshot (remember to install grim, slurp and swappy)
 bindsym Print exec grim -g "$(slurp)" - | swappy -f -
@@ -165,7 +165,7 @@ bindsym XF86MonBrightnessUp exec brightnessctl set +5% | sed -En 's/.*\(([0-9]+)
 #-------------------- Menus -------------------- #
 
 # Application menu
-bindsym Mod4+p exec wmenu-run -i -f "Adwaita Mono, 13"
+bindsym Mod1+p exec wmenu-run -i -f "Adwaita Mono, 13"
 
 #-------------------- Window settings --------------------#
 
@@ -207,7 +207,7 @@ exec_always sh -c "killall kanshi; kanshi &"
 exec_always sh -c "killall clipmon; clipmon &"
 
 #-------------------- Themeables --------------------#
-font pango:Adwaita Mono 11
+font pango:Dejavu Sans Mono 11
 
 output * bg #bfc7ca solid_color
 
